--- a/package.json
+++ b/package.json
@@ -12,26 +12,35 @@
     "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "~14.0.4",
     "@gorhom/bottom-sheet": "^5.2.4",
+    "@imgly/background-removal": "^1.7.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-firebase/app": "^23.4.0",
+    "@react-native-firebase/messaging": "^23.4.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
-    "axios": "^1.11.0",
+    "axios": "^1.12.2",
     "expo": "~52.0.46",
     "expo-av": "^15.0.2",
+    "expo-clipboard": "^8.0.7",
     "expo-file-system": "~18.0.12",
+    "expo-haptics": "~14.0.1",
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-media-library": "~17.0.6",
+    "expo-permissions": "^14.4.0",
     "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
     "lucide-react": "^0.541.0",
     "lucide-react-native": "^0.542.0",
-    "react": "18.3.1",
+    "native": "^0.3.3",
+    "onnxruntime-web": "^1.21.0",
+    "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-awesome-alerts": "^2.0.0",
@@ -40,6 +49,7 @@
     "react-native-collapsible": "^1.6.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-modalize": "^2.1.1",
@@ -51,16 +61,20 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-share": "^12.2.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-svg": "15.8.0",
     "react-native-sweet-alert": "^3.5.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.16.1",
+    "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.19.13",
-    "expo-haptics": "~14.0.1"
+    "shimmer": "^1.2.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^20.0.2",
     "@types/react": "~18.3.12",
     "@types/react-native-material-ripple": "^0.9.6",
     "@types/react-native-vector-icons": "^6.4.18",
