--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "~14.0.4",
     "@gorhom/bottom-sheet": "^5.2.4",
-    "@imgly/background-removal": "^1.7.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/datetimepicker": "8.2.0",
@@ -28,18 +27,20 @@
     "expo": "~52.0.46",
     "expo-av": "^15.0.2",
     "expo-clipboard": "^8.0.7",
+    "expo-constants": "~17.0.8",
+    "expo-device": "~7.0.3",
     "expo-file-system": "~18.0.12",
     "expo-haptics": "~14.0.1",
+    "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-media-library": "~17.0.6",
-    "expo-permissions": "^14.4.0",
+    "expo-notifications": "~0.29.14",
     "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
     "lucide-react": "^0.541.0",
     "lucide-react-native": "^0.542.0",
     "native": "^0.3.3",
-    "onnxruntime-web": "^1.21.0",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
