--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-notifications": "~0.29.14",
     "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "^6.0.7",
     "lucide-react": "^0.541.0",
     "lucide-react-native": "^0.542.0",
     "native": "^0.3.3",
@@ -57,6 +58,7 @@
     "react-native-otp-textinput": "^1.1.6",
     "react-native-paper": "^5.13.1",
     "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
