--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "~14.0.4",
     "@gorhom/bottom-sheet": "^5.2.4",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-firebase/app": "^23.4.0",
     "@react-native-firebase/messaging": "^23.4.0",
-    "@react-native-picker/picker": "^2.11.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
     "@vibrant/core": "^4.0.0",
     "axios": "^1.12.2",
-    "expo": "~52.0.46",
+    "expo": "~52.0.47",
     "expo-av": "^15.0.2",
-    "expo-clipboard": "^8.0.7",
+    "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
     "expo-device": "~7.0.3",
     "expo-file-system": "~18.0.12",
@@ -39,7 +39,7 @@
     "expo-notifications": "~0.29.14",
     "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "^6.0.7",
+    "expo-system-ui": "~4.0.9",
     "lucide-react": "^0.541.0",
     "lucide-react-native": "^0.542.0",
     "native": "^0.3.3",
