--- a/eas.json
+++ b/eas.json
@@ -2,26 +2,20 @@
   "build": {
     "preview": {
       "node": "20.19.4",
-      "image": "ubuntu-22.04",
       "android": {
         "buildType": "apk"
       }
     },
     "preview2": {
-      "node": "20.19.4",
-      "image": "ubuntu-22.04",
-      "android": {
-        "gradleCommand": ":app:assembleRelease"
-      }
+      "node": "20.19.4"
+     
     },
     "preview3": {
       "node": "20.19.4",
-      "image": "ubuntu-22.04",
       "developmentClient": true
     },
     "production": {
-      "node": "20.19.4",
-      "image": "ubuntu-22.04"
+      "node": "20.19.4"
     }
   }
 }
