--- a/package.json
+++ b/package.json
@@ -41,17 +41,21 @@
     "@react-navigation/stack": "^7.2.10",
     "@vibrant/core": "^4.0.0",
     "axios": "^1.12.2",
-    "expo": "~52.0.47",
-    "expo-av": "^15.0.2",
+    "expo": "52",
+    "expo-application": "~6.0.2",
+    "expo-av": "~15.0.2",
+    "expo-build-properties": "~0.13.3",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
     "expo-device": "~7.0.3",
     "expo-file-system": "~18.0.12",
+    "expo-font": "^14.0.9",
     "expo-haptics": "~14.0.1",
     "expo-image-manipulator": "~13.0.6",
-    "expo-image-picker": "^16.0.6",
-    "expo-linear-gradient": "^14.0.2",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-media-library": "~17.0.6",
+    "expo-modules-core": "~2.2.3",
     "expo-notifications": "~0.29.14",
     "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
@@ -60,13 +64,14 @@
     "lucide-react-native": "^0.542.0",
     "native": "^0.3.3",
     "node-vibrant": "^4.0.3",
-    "react": "^18.3.1",
+    "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-calendars": "^1.1311.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.2",
+    "react-native-device-info": "^14.1.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-colors": "^2.5.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -93,7 +98,9 @@
     "react-native-web": "~0.19.13",
     "shimmer": "^1.2.1",
     "socket.io-client": "^4.8.1",
-    "tinycolor2": "^1.6.0"
+    "tinycolor2": "^1.6.0",
+    "ua-parser-js": "^2.0.6",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -102,6 +109,9 @@
     "@types/react-native-material-ripple": "^0.9.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=20.19.4"
   },
   "private": true
 }
