--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "expo-constants": "~17.0.8",
     "expo-device": "~7.0.3",
     "expo-file-system": "~18.0.12",
-    "expo-font": "^14.0.9",
+    "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.6",
@@ -92,6 +92,7 @@
     "react-native-svg": "15.8.0",
     "react-native-sweet-alert": "^3.5.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.16.1",
     "react-native-view-shot": "^4.0.3",
@@ -99,8 +100,7 @@
     "shimmer": "^1.2.1",
     "socket.io-client": "^4.8.1",
     "tinycolor2": "^1.6.0",
-    "ua-parser-js": "^2.0.6",
-    "uuid": "^13.0.0"
+    "ua-parser-js": "^2.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
